--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" alt="Ridex logo">
+        <img src="/assets/images/logo.svg" alt="Ridex logo">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -107,7 +107,7 @@
         <div class="container">
 
           <div class="hero-content">
-            <h2 class="h1 hero-title">One of the best bike rentals in bhubaneshwar , Contact Us at Sagar (+91 8144622379) </h2>
+            <h2 class="h1 hero-title">One of the best bike rentals in bhubaneshwar , Contact Us at +91 8144622379 or +91 8828290513 </h2>
 
             <p class="hero-text">
               Live in Bhubaneshwar
@@ -171,7 +171,7 @@
               <div class="featured-car-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/car-1.jpg" alt="Toyota RAV4 2021" loading="lazy" width="440" height="300"
+                  <img src="./assets/images/300f.jpeg" alt="Honda CB 300F Flex Fuel" loading="lazy" width="440" height="300"
                     class="w-100">
                 </figure>
 
@@ -179,52 +179,60 @@
 
                   <div class="card-title-wrapper">
                     <h3 class="h3 card-title">
-                      <a href="#">Toyota RAV4</a>
+                      <a href="#">Honda CB 300F</a>
                     </h3>
 
-                    <data class="year" value="2021">2021</data>
+                    <data class="year" value="2025">2025</data>
                   </div>
-
-                  <ul class="card-list">
-
-                    <li class="card-list-item">
-                      <ion-icon name="people-outline"></ion-icon>
-
-                      <span class="card-item-text">4 People</span>
-                    </li>
-
-                    <li class="card-list-item">
-                      <ion-icon name="flash-outline"></ion-icon>
-
-                      <span class="card-item-text">Hybrid</span>
-                    </li>
-
-                    <li class="card-list-item">
-                      <ion-icon name="speedometer-outline"></ion-icon>
-
-                      <span class="card-item-text">6.1km / 1-litre</span>
-                    </li>
-
-                    <li class="card-list-item">
-                      <ion-icon name="hardware-chip-outline"></ion-icon>
-
-                      <span class="card-item-text">Automatic</span>
-                    </li>
-
-                  </ul>
 
                   <div class="card-price-wrapper">
 
                     <p class="card-price">
-                      <strong>$440</strong> / month
+                      <strong>Rs 1300</strong> / day
                     </p>
 
                     <button class="btn fav-btn" aria-label="Add to favourite list">
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
-
+<!-- 
                     <button class="btn">Rent now</button>
+-->
+                  </div>
 
+                </div>
+
+              </div>
+            </li>
+ <li>
+              <div class="featured-car-card">
+
+                <figure class="card-banner">
+                  <img src="./assets/images/tvsjupiter.jpg" alt="TVS Jupiter 110" loading="lazy" width="440" height="300"
+                    class="w-100">
+                </figure>
+
+                <div class="card-content">
+
+                  <div class="card-title-wrapper">
+                    <h3 class="h3 card-title">
+                      <a href="#">TVS Jupiter 110</a>
+                    </h3>
+
+                    <data class="year" value="2022">2022</data>
+                  </div>
+
+                  <div class="card-price-wrapper">
+
+                    <p class="card-price">
+                      <strong>Rs 500</strong> / day
+                    </p>
+
+                    <button class="btn fav-btn" aria-label="Add to favourite list">
+                      <ion-icon name="heart-outline"></ion-icon>
+                    </button>
+<!-- 
+                    <button class="btn">Rent now</button>
+-->
                   </div>
 
                 </div>
@@ -232,6 +240,7 @@
               </div>
             </li>
 
+            <!--
             <li>
               <div class="featured-car-card">
 
@@ -556,7 +565,7 @@
 
               </div>
             </li>
-
+-->
           </ul>
 
         </div>
