--- a/index.html
+++ b/index.html
@@ -579,9 +579,10 @@
       <section class="aboutus" id="aboutus">
         <div class="container">
 
-          <h2 class="h2 section-title">About Us</h2>
+          <h2 class="h2 section-title">Locate Us</h2>
 
-       
+
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3742.5411297051633!2d85.81249107394855!3d20.277856913147907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19a726023fc503%3A0x3d8f5ab0742b40d9!2sLitu%20Bike%20Rental!5e0!3m2!1sen!2sin!4v1757776399924!5m2!1sen!2sin" style="border:2px;height:60vh;width:90vw" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
 
